education and contact

--- a/index.html
+++ b/index.html
@@ -7,15 +7,51 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <section class="container"> 
-        <div class="resume__img">
-        <img src="./id.jpg" alt="">
-    </div>
-    <div class="resume__name">
-    <h2>Kamote Cue</h2>
-    <h3>BS Computer Science</h3>
-    <h3>09222222222</h3>
+    <section class="resume"> 
+        <div class="container">
+            <div class="resume__img">
+                <img src="./id.jpg" alt="">
+            </div>
+            <div class="resume__name">
+            <h2>Kamote Cue</h2>
+            <h3>BS Computer Science</h3>
+            <h3>09222222222</h3>
+            </div>    
+        </div>
+        
+</section>
+
+<section class="education">
+    <div class="education__container">
+        <h2>Educational Background</h2>
+        <div class="education__content">
+            <table>
+                <tr>
+                    <td>Senior HighSchool</td>
+                    <td>South Lakes Integrated School</td>
+                </tr>
+                <tr>
+                    <td>Junior HighSchool</td>
+                    <td>San Vicente Integrated HighSchool</td>
+                </tr>
+                <tr>
+                    <td>Primary School</td>
+                    <td>Sta. Monica Elementary</td>
+                </tr>
+            </table>
+        </div>
     </div>
 </section>
+
+<section class="contact">
+    <div class="contact__container">
+        <ul>
+            <li><a href=https://www.facebook.com/""><img src="./facebook.jpg" alt=""></a></li>
+            <li><a href=https://www.youtube.com/""><img src="./youtube.png" alt=""></a></li>
+            <li><a href=https://www.instagram.com/""><img src="./instagram.jpg" alt=""></a></li>
+        </ul>
+    </div>
+</section>
+
 </body>
 </html>
